support web views bump to v2.0.0

--- a/test/chrome-app/index.html
+++ b/test/chrome-app/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
   <h1>IT WORKED!</h1>
+  View console to see the events
 </body>
-<script src="index.js"></script>
+<webview src="webview.html#fragment" id="wv" partition="wvevent" autosize="true" minwidth="500" minheight="450"></webview>
+<script src="index.js"></script> 
 </html>
